Fixed alignment issues

--- a/pwd/pwd.css
+++ b/pwd/pwd.css
@@ -47,7 +47,7 @@ html{
   position: absolute;
   width: 100%;
   height: 2px;
-  background-color: lightgreen;
+  background-color: #002c3e;
   transition-duration: .50s;
 }
 .menu__btn > span::before {
@@ -130,8 +130,8 @@ body {
     align-items: center;
     flex-direction: column;
     width: 500px;
-    margin-left :32rem;
-    margin-top:16rem;
+    margin-left :27em;
+    margin-top:9em;
   }
 
 .form
@@ -188,14 +188,7 @@ button
     border:none;
     padding: .5rem 1rem;
     cursor: pointer;
-    border-radius: 1rem;
-    height:2rem;
-    font-weight: bold;
+    height:2.5rem;
     width:200px;
 
-}
-button:hover
-{
-  color:white;
-  font-weight: bold;
 }
